--- a/css/styles.css
+++ b/css/styles.css
@@ -1,344 +1,213 @@
-body {
-    font-family: 'Roboto', sans-serif;
-    font-weight: 500;
-    color: #434455;
-    background-color: #FFFFFF;
+:root {
+    --navyblue: #2e2f42;
+    --slate: #434455;
+    --iris: #4d5ae5;
+    --ocean: #404bbf;
+
 }
 
-:root {
-    --text-color: #2E2F42;
-    --secondary-color: #404BBF;
+body {
+    font-family: "Roboto", sans-serif;
+    font-style: normal;
+    color: #434455;
+    background-color: #ffffff;
+
 }
 
 .link {
     text-decoration: none;
 }
 
-.visually-hidden {
-    margin: -1px;
-    border: 0;
-
-    white-space: nowrap;
-    clip-path: inset(100%);
-    clip: rect(0 0 0 0);
-    overflow: hidden;
-}
-
 .list {
-    list-style: none;
+    list-style-type: none;
 }
 
-p,
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-    margin-top: 0;
-    margin-bottom: 0;
-}
+/*!----------HEADER----------*/
 
-ul {
-    margin-top: 0;
-    margin-bottom: 0;
-    padding-left: 0;
-}
-
-.conteiner {
-    width: 100%;
-    max-width: 1158px;
-    padding-right: 15px;
-    padding-left: 15px;
-    margin: 0 auto;
-}
-
-/*  */
-
-
-
-
-/* -------HEADER--------- */
-
-
-/* LOGO */
-
-.logo {
-    color: #4D5AE5;
+.header-logo {
+    color: var(--iris);
     font-size: 18px;
-    font-family: 'Raleway', sans-serif;
+    font-family: "Raleway", sans-serif;
+    font-style: normal;
     font-weight: 800;
     line-height: 1.17;
     letter-spacing: 0.03em;
     text-transform: uppercase;
 }
 
-.logo-accent {
-    color: var(--text-color);
-}
-
-
-/* NAVIGATION */
-
-.header-menu {
-    display: flex;
-    align-items: center;
-    gap: 40px;
-}
-
-.header-navigation {
-    display: flex;
-    align-items: center;
-    flex-grow: 1;
-    justify-content: space-between;
-}
-
-.header-conteiner {
-    display: flex;
-    align-items: center;
-    gap: 332px;
-    padding-bottom: 25.5px;
-    padding-top: 25.5px;
-}
-
-.header-contacts-list {
-    display: flex;
-    align-items: center;
-    gap: 40px;
+.header-logo-accent {
+    color: var(--navyblue);
+    font-size: 18px;
+    font-family: "Raleway", sans-serif;
+    font-style: normal;
+    font-weight: 800;
+    line-height: 1.17;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
 }
 
 .header-menu-link {
-    font-weight: 500;
+    color: var(--navyblue);
     font-size: 16px;
+    font-style: normal;
+    font-weight: 500;
     line-height: 1.5;
     letter-spacing: 0.02em;
-    color: #2E2F42;
 }
 
-.header-menu-link:hover {
-    color: #404bbf;
-}
-
+.header-menu-link:hover,
 .header-menu-link:focus {
-    color: #404bbf;
+    color: var(--ocean);
 }
 
-.header-contacts {
+.header-address {
     font-style: normal;
 }
 
-.header-contacts-link {
+.header-address-link {
+    color: var(--slate);
     font-size: 16px;
-    line-height: 1.5;
-    letter-spacing: 0.02em;
-    color: #434455;
-}
-
-.header-contacts-link:hover {
-    color: #404bbf;
-}
-
-.header-contacts-link:focus {
-    color: #404bbf;
-}
-
-/*------- MAIN ----------*/
-
-.hero-conteiner {
-    background-color: #2e2f42;
-    padding-top: 188px;
-    padding-bottom: 188px;
-    padding-right: 472px;
-    padding-left: 472px;
-    align-content: center;
-}
-
-.hero-title {
-    font-size: 56px;
-    line-height: 1.07;
-    text-align: center;
-    letter-spacing: 0.02em;
-    color: #ffffff;
-    margin-bottom: 48px;
-    display: flex;
-    width: 496px;
-    flex-direction: column;
-    flex-shrink: 0;
-    /* padding-top: 188px;
-    padding-left: 472px;
-    padding-right: 472px; */
-}
-
-.hero-button {
-    background-color: #4D5AE5;
-    font-family: "Roboto", sans-serif;
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 1.5;
-    letter-spacing: 0.04em;
-    color: #ffffff;
-    cursor: pointer;
-    padding: 16px 32px;
-    display: inline-flex;
-    align-items: flex-start;
-    gap: 10px;
-    border-radius: 4px;
-    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
-}
-
-.hero-button:hover {
-    background-color: #404BBF;
-}
-
-.hero-button:focus {
-    background-color: #404BBF;
-}
-
-.features-list {
-    display: flex;
-    padding-bottom: 120px;
-    padding-top: 120px;
-    gap: 24px;
-}
-
-.features-item-title {
-    font-weight: 500;
-    color: var(--text-color);
-    font-size: 20px;
-    line-height: 1.2;
-    letter-spacing: 0.02em;
-    margin-bottom: 8px;
-}
-
-.features-item-text {
-    color: #434455;
-    font-size: 16px;
+    font-style: normal;
     font-weight: 400;
     line-height: 1.5;
     letter-spacing: 0.02em;
 }
 
-.projects-title {
+.header-address-link:hover,
+.header-address-link:focus {
+    color: var(--ocean);
+}
+
+
+/*!----------HERO----------*/
+
+.hero {
+    background-color: var(--navyblue);
+}
+
+.hero-title {
+    color: #FFF;
     text-align: center;
-    color: var(--text-color);
+    font-size: 56px;
+    font-weight: 700;
+    line-height: 1.07;
+    letter-spacing: 0.02em;
+}
+
+.hero-btn {
+    color: #FFF;
+    font-size: 16px;
+    font-family: "Roboto", sans-serif;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 1.5;
+    letter-spacing: 0.04em;
+    background-color: var(--iris);
+    cursor: pointer;
+}
+
+.hero-btn:hover,
+.hero-btn:focus {
+    background-color: var(--ocean);
+    color: #ffffff;
+}
+
+/*!----------ADVANTAGES----------*/
+
+.advantages {
+    background-color: #FFF;
+}
+
+.advantages-subtitle {
+    color: var(--navyblue);
+    font-size: 20px;
+    font-weight: 500;
+    line-height: 1.2;
+    letter-spacing: 0.02em;
+}
+
+.advantages-item-text {
+    color: var(--slate);
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+}
+
+/*!----------DOING----------*/
+
+.doing {
+    background-color: #FFF;
+}
+
+.doing-title {
+    color: var(--navyblue);
+    text-align: center;
     font-size: 36px;
     font-weight: 700;
     line-height: 1.11;
     letter-spacing: 0.02em;
     text-transform: capitalize;
-    margin-bottom: 72px;
 }
 
-.projects-list {
-    display: flex;
-    gap: 24px;
-    padding-bottom: 120px;
-}
+/*!----------TEAM----------*/
 
-
-.team {}
-
-.team-conteiner {
+.team {
     background-color: #F4F4FD;
-    padding-top: 120px;
-    padding-bottom: 120px;
-}
-
-.team-list {
-    display: flex;
-    gap: 24px;
 }
 
 .team-title {
-    font-size: 36px;
-    line-height: 1.11;
+    color: var(--navyblue);
     text-align: center;
+    font-size: 36px;
+    font-weight: 700;
+    line-height: 1.11;
     letter-spacing: 0.02em;
     text-transform: capitalize;
-    color: #2e2f42;
-    margin-bottom: 72px;
 }
 
 .team-item {
-    background-color: #FFFFFF;
+    background-color: #FFF;
 }
 
-.team-item-title {
-    font-weight: 500;
+.team-name {
+    color: var(--navyblue);
+    text-align: center;
     font-size: 20px;
+    font-weight: 500;
     line-height: 1.2;
     letter-spacing: 0.02em;
-    color: #2e2f42;
-    padding-top: 32px;
-    margin-bottom: 8px;
+}
+
+.team-text {
+    color: var(--slate);
     text-align: center;
-}
-
-.team-item-text {
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
-    color: #434455;
-    text-align: center;
-    padding-bottom: 32px;
 }
 
-
-/* BUTTONS PORTOFOLIO */
-
-.button {
-    font-family: "Roboto", sans-serif;
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 1.5;
-    letter-spacing: 0.04em;
-    color: #4d5ae5;
-    background-color: #F4F4FD;
-    cursor: pointer;
-}
-
-.button:hover {
-    color: #FFFFFF;
-    background-color: #404BBF;
-}
-
-.button:focus {
-    color: #FFFFFF;
-    background-color: #404BBF;
-}
-
-/* CONTENT */
-
-.content-item-title {
-    font-weight: 500;
-    font-size: 20px;
-    line-height: 1.2;
-    letter-spacing: 0.02em;
-    color: #2e2f42;
-}
-
-.content-item-text {
-    font-size: 16px;
-    line-height: 1.5;
-    letter-spacing: 0.02em;
-    color: #434455;
-}
-
-
-/* ------FOOTER------ */
+/*!----------FOOTER----------*/
 
 .footer {
-    background-color: #2E2F42;
-}
-
-.logo-full {
-    gap: 17.5px;
+    background-color: var(--navyblue);
 }
 
 .footer-logo {
-    color: #4d5ae5;
+    color: var(--iris);
     font-size: 18px;
-    font-family: 'Raleway', sans-serif;
+    font-family: "Raleway", sans-serif;
+    font-style: normal;
+    font-weight: 800;
+    line-height: 1.17;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+}
+
+.footer-logo-accent {
+    color: #F4F4FD;
+    font-size: 18px;
+    font-family: "Raleway", sans-serif;
+    font-style: normal;
     font-weight: 800;
     line-height: 1.17;
     letter-spacing: 0.03em;
@@ -348,20 +217,46 @@ ul {
 .footer-text {
     color: #F4F4FD;
     font-size: 16px;
-    font-weight: 400;
     line-height: 1.5;
     letter-spacing: 0.02em;
-    display: flex;
-    width: 264px;
-    flex-direction: column;
-    flex-shrink: 0;
 }
 
-.footer-logo-accent {
-    color: #F4F4FD;
+/*!----------PORTFOLIO----------*/
+
+.portfolio {
+    background-color: #FFF;
 }
 
-.footer-conteiner {
-    padding-top: 101.5px;
-    padding-bottom: 100px;
+.portfolio-filters-btn {
+    color: var(--iris);
+    text-align: center;
+    font-size: 16px;
+    font-family: "Roboto", sans-serif;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 1.5;
+    letter-spacing: 0.04em;
+    background-color: #F4F4FD;
+    cursor: pointer;
+}
+
+.portfolio-filters-btn:hover,
+.portfolio-filters-btn:focus {
+    background-color: var(--ocean);
+    color: #ffffff;
+}
+
+.projects-name {
+    color: var(--navyblue);
+    font-size: 20px;
+    font-weight: 500;
+    line-height: 1.2;
+    letter-spacing: 0.02em;
+}
+
+.projects-filters {
+    color: var(--slate);
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
 }
